fix: fix overflow body

--- a/web/src/assets/styles/global.css
+++ b/web/src/assets/styles/global.css
@@ -22,3 +22,7 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+#root {
+  overflow-x: hidden;
+}
